--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.5.2",
     "antd": "^5.23.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
-    "react-router-dom": "^6.28.2"
+    "react-router-dom": "^6.28.2",
+    "redux-persist": "^6.0.0",
+    "sonner": "^1.7.2",
+    "sooner": "^1.1.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
